--- a/configuration.yaml
+++ b/configuration.yaml
@@ -45,7 +45,7 @@ mqtt:
 
 #zwave:
 #  usb_path: /dev/ttyUSB21
-#  config_path: /usr/local/share/python-openzwave/config
+#  config_path: /usr/local/lib/python3.4/dist-packages/libopenzwave-0.3.0b9-py3.4-linux-armv7l.egg/config
 #  polling_interval: 60000
 
 #rfxtrx:
