--- a/configuration.yaml
+++ b/configuration.yaml
@@ -81,6 +81,14 @@ device_tracker:
 - platform: owntracks
   max_gps_accuracy: 200
 
+- platform: nmap_tracker
+  hosts: 192.168.7.7-250
+#  home_interval: 30
+  track_new_devices: yes
+# consider_home will be the number of seconds to wait till marking someone as not home after not being seen on scans.
+# 900 seconds = 15 minutes
+  consider_home: 1800
+
 ifttt:
   key: ***REMOVED***
 
