--- a/configuration.yaml
+++ b/configuration.yaml
@@ -23,30 +23,146 @@ homeassistant:
         entity_picture: /local/wb-icons/wb_thomas.png
       device_tracker.liane_phone:
         entity_picture: /local/wb-icons/wb_liane.png
+      sensor.aeotec_multi_sensor_luminance_3:
+        friendly_name: Hall Luminance
+      sensor.aeotec_multi_sensor_relative_humidity_3:
+        friendly_name: Hall Humidity
+      sensor.aeotec_multi_sensor_temperature_3:
+        friendly_name: Hall Temperature
+      binary_sensor.aeotec_multi_sensor_sensor_3:
+        friendly_name: Hall Motion
+      light.__level_40:
+        friendly_name: Unused Dimmer
       light.__level_41:
         friendly_name: Ballroom North
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_13:
-        friendly_name: Hall West Setpoint
+        friendly_name: Hall West Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_14:
-        friendly_name: Study East Setpoint
+        friendly_name: Study East Valve
+        polling_intensity: 0
+      light._level_14:
+        friendly_name: Study East Valve_
+        polling_intensity: 0
+      light.__level_14:
+        friendly_name: Study East Valve__
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_15:
-        friendly_name: Study West Setpoint
+        friendly_name: Study West Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_24:
-        friendly_name: Hall East Setpoint
+        friendly_name: Hall East Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_25:
-        friendly_name: Library Setpoint
+        friendly_name: Library Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_29:
-        friendly_name: Mark's Bedroom Setpoint
+        friendly_name: Mark's Bedroom Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_30:
-        friendly_name: Lounge East Setpoint
+        friendly_name: Lounge East Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_33:
-        friendly_name: Ballroom East Setpoint
+        friendly_name: Ballroom East Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_34:
-        friendly_name: Kitchen Setpoint
+        friendly_name: Kitchen Valve
+        polling_intensity: 0
       light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_43:
+        friendly_name: Hall Annex Valve
+        polling_intensity: 0
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_13:
+        friendly_name: Hall West Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_14:
+        friendly_name: Study East Temperature
+        polling_intensity: 5
+      sensor.study_east_temperature_14:
+        friendly_name: Study-East Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_15:
+        friendly_name: Study West Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_24:
+        friendly_name: Hall East Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_25:
+        friendly_name: Library Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_29:
+        friendly_name: Mark's Bedroom Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_30:
+        friendly_name: Lounge East Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_33:
+        friendly_name: Ballroom East Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_34:
+        friendly_name: Kitchen Temperature
+        polling_intensity: 5
+      sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_43:
+        friendly_name: Hall Annex Temperature
+        polling_intensity: 5
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_13:
+        friendly_name: Hall West Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_14:
+        friendly_name: Study East Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_15:
+        friendly_name: Study West Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_24:
+        friendly_name: Hall East Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_25:
+        friendly_name: Library Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_29:
+        friendly_name: Mark's Bedroom Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_30:
+        friendly_name: Lounge East Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_33:
+        friendly_name: Ballroom East Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_34:
+        friendly_name: Kitchen Setpoint
+      thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_43:
         friendly_name: Hall Annex Setpoint
       light.fibaro_system_fgd212_dimmer_2_level_39:
         friendly_name: Mark's Bedroom Overhead
+      thermostat.horstmann_scsc17_thermostat_heating_1_35:
+        friendly_name: Main Heating Setpoint
+      sensor.horstmann_scsc17_thermostat_temperature_35:
+        friendly_name: Main Heating Temperature
+      switch.horstmann_scsc17_thermostat_switch_35:
+        friendly_name: Main Heating Holiday Mode
+      thermostat.horstmann_scsc17_thermostat_heating_1_50:
+        friendly_name: Annex Heating Setpoint
+      sensor.horstmann_scsc17_thermostat_temperature_50:
+        friendly_name: Annex Heating Temperature
+      switch.horstmann_scsc17_thermostat_switch_50:
+        friendly_name: Annex Heating Holiday Mode
+      thermostat.horstmann_unknown_type0003_id0002_mode_36:
+        friendly_name: Main Heating Mode
+      thermostat.horstmann_unknown_type0003_id0002_mode_36_2:
+        friendly_name: Main Hot Water Mode
+      thermostat.horstmann_unknown_type0003_id0002_mode_36_3:
+        friendly_name: Main Boiler All Modes
+      switch.horstmann_unknown_type0003_id0002_switch_36:
+        friendly_name: Main Heating Manual
+      switch.horstmann_unknown_type0003_id0002_switch_36_2:
+        friendly_name: Main Hot Water Manual
+      switch.horstmann_unknown_type0003_id0002_switch_36_3:
+        friendly_name: Main Boiler All Circuits
+      switch.f40fa81__0a140000f40fa801010060:
+        friendly_name: Lounge East
+      switch.0a140000f40fa801010050:
+        friendly_name: RFX8010
+      switch.0a140001f40fa810050040:
+        friendly_name: RFX8100
+      switch.0a14000cf40fa910020040:
+        friendly_name: RFX9100
+      switch.f40fa816__0a140002f40fa810020050:
+        friendly_name: Lounge Lights Off
+      media_player.txnr636_0009b09961fb:
+        friendly_name: Ballroom Amplifier
 
 # Discover some devices automatically
 discovery:
@@ -118,10 +234,25 @@ ifttt:
 #
 
 group:
+  heating_valves:
+    entities:
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_13
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_14
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_15
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_24
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_25
+    - light.library_level_25
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_29
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_30
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_33
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_34
+    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_43
+    name: Heating Demand
+    view: false
   annex_heating:
     entities:
-    - thermostat.horstmann_scsc17_thermostat_thermostat_mode_50
-    - sensor.horstmann_scsc17_thermostat_thermostat_temperature_50
+    - thermostat.horstmann_scsc17_thermostat_heating_1_50
+    - sensor.horstmann_scsc17_thermostat_temperature_50
     - switch.horstmann_scsc17_thermostat_switch_50
     - switch.horstmann_unknown_type0003_id0001_switch_45
     - thermostat.horstmann_unknown_type0003_id0001_mode_45
@@ -130,6 +261,7 @@ group:
   ballroom:
     entities:
     - media_player.ballroom
+    - media_player.ballroom_amplifier
     - group.ballroom_lights
     - group.ballroom_heating
     - group.ballroom_scenes
@@ -138,10 +270,8 @@ group:
     view: true
   ballroom_heating:
     entities:
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_33
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_33
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_33
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_33
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_33
     name: Ballroom Heating
     view: false
   ballroom_lights:
@@ -174,23 +304,21 @@ group:
     - group.hall_scenes
     - group.main_heating
     - group.annex_heating
+    - sensor.aeotec_multi_sensor_luminance_3
+    - sensor.aeotec_multi_sensor_relative_humidity_3
+    - sensor.aeotec_multi_sensor_temperature_3
+    - binary_sensor.aeotec_multi_sensor_sensor_3
     icon: mdi:fullscreen-exit
     name: Hall
     view: true
   hall_heating:
     entities:
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_13
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_13
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_13
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_13
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_13
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_24
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_24
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_24
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_24
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_24
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_43
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_43
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_43
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_43
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_43
     name: Hall Heating
     view: false
   hall_lights:
@@ -210,10 +338,8 @@ group:
     view: true
   kitchen_heating:
     entities:
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_34
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_34
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_34
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_34
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_34
     name: Kitchen Heating
     view: false
   kitchen_lights:
@@ -237,10 +363,10 @@ group:
     view: true
   library_heating:
     entities:
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_25
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_25
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_25
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_25
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_25
+    - thermostat.library_comfort_setpoint_25
+    - sensor.library_temperature_25
     name: Library Heating
     view: false
   library_lights:
@@ -264,10 +390,8 @@ group:
     view: true
   lounge_heating:
     entities:
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_30
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_30
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_30
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_30
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_30
     name: Lounge Heating
     view: false
   lounge_lights:
@@ -287,8 +411,8 @@ group:
     view: false
   main_heating:
     entities:
-    - thermostat.horstmann_scsc17_thermostat_thermostat_mode_35
-    - sensor.horstmann_scsc17_thermostat_thermostat_temperature_35
+    - thermostat.horstmann_scsc17_thermostat_heating_1_35
+    - sensor.horstmann_scsc17_thermostat_temperature_35
     - switch.horstmann_scsc17_thermostat_switch_35
     - switch.horstmann_unknown_type0003_id0002_switch_36
     - thermostat.horstmann_unknown_type0003_id0002_mode_36
@@ -298,10 +422,8 @@ group:
     view: false
   marks_bedroom_heating:
     entities:
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_29
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_29
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_29
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_29
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_29
     name: Mark's Bedroom Heating
     view: false
   marks_bedroom_lights:
@@ -336,14 +458,14 @@ group:
     view: true
   study_heating:
     entities:
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_15
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_15
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_15
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_15
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_15
-    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_mode_14
+    - thermostat.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_comfort_setpoint_14
     - sensor.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_temperature_14
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_level_14
-    - light.eurotronic_eur_stellaz_wall_radiator_thermostat_valve_control_step_size_14
+    - thermostat.study_east_comfort_setpoint_14
+    - sensor.study_east_temperature_14
+    - thermostat.study_west_comfort_setpoint_15
+    - sensor.study_west_temperature_15
     name: Study Heating
     view: false
   study_lights:
@@ -378,6 +500,9 @@ media_player:
 - name: Library
   platform: kodi
   url: http://library/jsonrpc
+- name: Ballroom Amplifier
+  platform: onkyo
+  host: ballroom-amp
 scene:
 - entities: {}
   name: Study Off
@@ -457,7 +582,6 @@ scene:
   name: Library Chat
 - entities: {}
   name: Library Read
-sensor: []
 switch:
 - command_topic: ha/study/demand/command
   name: Study Demand
